@@ -1,2 +1,2 @@
 # icon file available in a dependent package.
-idle binary: menu-icon-missing
+idle2 binary: menu-icon-missing
