@@ -3,8 +3,9 @@ python-defaults (2.7.14-2) UNRELEASED; urgency=medium
   * pycompile, pyclean, pyversions: Use python2 as the shebang to guard
     against people fiddling around with the python symlink or having a
     python3 installed as python in /usr/local. LP: #1715062.
+  * Rename the idle package to idle2. idle is now built for python3.
 
- -- Matthias Klose <doko@debian.org>  Fri, 22 Sep 2017 12:13:42 +0200
+ -- Matthias Klose <doko@debian.org>  Sat, 23 Sep 2017 09:54:08 +0200
 
 python-defaults (2.7.14-1) unstable; urgency=medium
 
